# agente-analista-campanhas

./: # CLAUDE.md  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: daily-analysis.yml
data/: dados-campanhas-teste2.csv  dados-campanhas.csv
docs/: exemplo-anomalias.json  exemplo-relatorio.html  exemplo-relatorio.json
src/: __init__.py  analysis.py  config.py  ingestion.py  llm.py  logging_config.py  main.py  models.py  notify.py  report.py
templates/: report.html.j2
tests/: test_analysis.py  test_ingestion.py  test_llm.py  test_main.py  test_notify.py  test_report.py
