[project]
name = "agente-analista-campanhas"
version = "0.1.0"
description = "Agente que lê relatório de Meta Ads (CSV), detecta anomalias por objetivo, gera diagnóstico com LLM e notifica."
requires-python = ">=3.11"
dependencies = [
    # Fase 0 + Fase 1: ingestão, limpeza, validação e config.
    # Demais dependências (anthropic, tenacity, jinja2, httpx, resend)
    # entram nas fases em que forem usadas, para não inflar o ambiente.
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
